                              
   18 Jan 2019    'date difference in Hungarian'
                              The date difference WP function in Hungarien language was unusable.
                              I made the function in Hungarian_Contents class.

   18 Jan, 2019   'link aria-label changes'
                              Based on user feedbacks: external, open in new window and Google map indicators in aria-label
                              put in brackets,
                              + all indicators included in bracket.
   19 Jan, 2019   'add data filter'
                              Add manduca_link_rel filter to link function class.
                              Also documented in docs/hooks.txt
                              
   22 Jan, 2019   'fix skiplink issues'
                              Because Voiceover  cannot handle the links, necessary to apply javascripts to have jump links accessible.
                              Also, accessible back-to-top links included.
                              Double arrow-up svg icon included.
                              In order to give focus to header, tabindex attribute introduced.

............................................................................

   28 Jan, 2019  'language file from repository'
                              Upon auploading to repo, current language file copied here.
   
   31 Jan, 2019   'tiny fixings'
   
   1 Feb 2019     'Fix skiplink issues in Firefox'
                              The current skiplink method worked on Voicover (which is not adapt the standards),
                              but this version did not worke on firefox.
                              
   1 Feb, 2019    'Reading Options accessibility enhancement'
                              Add focus to reading option button on quitng the modal window
                              Escape key also quit the modal window