@@ -76,7 +76,7 @@ if(fontSize){$('body').addClass(fontSize)}
 else{$('body').addClass("font-size-0")}
 $('.toolbar-buttons-open').click(function(){$('.toolbar-buttons').slideToggle(200);if($(".menu-toggle").hasClass("toggled-on")){$(".megamenu").removeClass("toggled-on");$(".menu-toggle").removeClass("toggled-on")}
 if($(".toolbar-buttons").hasClass("toggled-on")){$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus()}
-else{$(".toolbar-buttons").addClass("toggled-on");$(".toolbar-buttons-open").addClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','true')}});$('#buttons-close').click(function(){$('#toolbar-buttons').slideUp();$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus()});$(document).on('keyup',function(evt){if(evt.key==='Escape'){if($(".toolbar-buttons").hasClass("toggled-on")){$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus();$(".toolbar-buttons").css('display','none')}}});$('.change-font-size').click(function(){var fontSize=$(this).attr('data-zoom');var CookieDate=new Date;$('body').removeClass('font-size-0 font-size-1 font-size-2 font-size-3');$('body').addClass(fontSize);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontSize='+fontSize+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.high-contrast').click(function(){var contrastType=$(this).attr('data-contrast-type');var CookieDate=new Date;$('body').removeClass('high-contrast-1 high-contrast-2 high-contrast-3 high-contrast-0');$('body').addClass(contrastType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='contrastType='+contrastType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.change-font-type').click(function(){var fontType=$(this).attr('data-font-type');var CookieDate=new Date;$('body').removeClass('font-type-1 font-type-2 font-type-0');$('body').addClass(fontType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontType='+fontType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#skip-to-content').click(function(){event.preventDefault();var pos=jQuery('#primary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#primary').find('h1').first().focus()});$('#skip-to-sidebar').click(function(){event.preventDefault();var pos=jQuery('#secondary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#secondary').find('h1').first().focus()});$('#skip-to-footer').click(function(){event.preventDefault();var pos=jQuery('#footer-wrapper').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#footer-wrapper').find('h1').first().focus()});$('#manduca-back-to-top').click(function(){var pos=jQuery('#primary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},1200);jQuery('#primary').find('h1').first().focus()});$(document).on('scroll',function(){if($(window).scrollTop()>100){$('.manduca-back-to-top-div').addClass('show')}else{$('.manduca-back-to-top-div').removeClass('show')}})})(jQuery);function createCookie(name,value,days){if(days){var date=new Date();date.setTime(date.getTime()+(days*24*60*60*1000));var expires="; expires="+date.toGMTString()}
+else{$(".toolbar-buttons").addClass("toggled-on");$(".toolbar-buttons-open").addClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','true')}});$('#buttons-close').click(function(){$('#toolbar-buttons').slideUp();$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus()});$(document).on('keyup',function(evt){if(evt.key==='Escape'){if($(".toolbar-buttons").hasClass("toggled-on")){$(".toolbar-buttons").removeClass("toggled-on");$(".toolbar-buttons-open").removeClass("toggled-on");$(".toolbar-buttons-open").attr('aria-expanded','false');$('#toolbar-buttons-open').focus();$(".toolbar-buttons").css('display','none')}}});$('.change-font-size').click(function(){var fontSize=$(this).attr('data-zoom');var CookieDate=new Date;$('body').removeClass('font-size-0 font-size-1 font-size-2 font-size-3');$('body').addClass(fontSize);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontSize='+fontSize+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.high-contrast').click(function(){var contrastType=$(this).attr('data-contrast-type');var CookieDate=new Date;$('body').removeClass('high-contrast-1 high-contrast-2 high-contrast-3 high-contrast-0');$('body').addClass(contrastType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='contrastType='+contrastType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('.change-font-type').click(function(){var fontType=$(this).attr('data-font-type');var CookieDate=new Date;$('body').removeClass('font-type-1 font-type-2 font-type-0');$('body').addClass(fontType);CookieDate.setFullYear(CookieDate.getFullYear()+10);document.cookie='fontType='+fontType+'; expires='+CookieDate.toGMTString()+'; path=/'});$('#skip-to-content').click(function(){event.preventDefault();var pos=jQuery('#primary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#primary').find('h1').first().focus()});$('#skip-to-sidebar').click(function(){event.preventDefault();var pos=jQuery('#secondary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#secondary').find('h1').first().focus()});$('#skip-to-footer').click(function(){event.preventDefault();var pos=jQuery('#footer-wrapper').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},800);jQuery('#footer-wrapper').find('h1').first().focus()});$('#manduca-back-to-top').click(function(){var pos=jQuery('#primary').position();var y=parseInt(pos.top);jQuery('html, body').animate({scrollTop:y},1200);jQuery('#primary').find('h1').first().focus()});$(document).on('scroll',function(){if($(window).scrollTop()>100){$('.manduca-back-to-top-div').addClass('show')}else{$('.manduca-back-to-top-div').removeClass('show')}});$('#manduca-archive-widget-submit').click(function(){var year=$('#manduca-archive-year-dropdown').val();var month=$('#manduca-archive-month-dropdown').val();var url=`/${year}/${month}/}`;document.location.href=url})})(jQuery);function createCookie(name,value,days){if(days){var date=new Date();date.setTime(date.getTime()+(days*24*60*60*1000));var expires="; expires="+date.toGMTString()}
 else var expires="";document.cookie=name+"="+value+expires+"; path=/"}
 function readCookie(name){var nameEQ=name+"=";var ca=document.cookie.split(';');for(var i=0;i<ca.length;i++){var c=ca[i];while(c.charAt(0)==' ')c=c.substring(1,c.length);if(c.indexOf(nameEQ)==0)return c.substring(nameEQ.length,c.length)}
 return null}
